Enhance README.md with detailed project description, features, installation instructions, and project structure. Update project files to include filtered resources in Eclipse configuration.